<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mx.violeta_tovar.tarea2.Activity2">


    <TextView
        android:text="@string/confirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textStyle="bold"
        android:textSize="@dimen/tamaño_nacimiento"
        android:gravity="center"

        />

    <TextView
        android:text="@string/nombre_muestra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_marginTop="@dimen/nombre_confirmar"

       />


    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginTop="@dimen/espacio2"
       android:weightSum="1">


        <TextView
            android:text="@string/fecha_nacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"


            />

        <TextView
            android:text="@string/dato_nacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:gravity="center"


            />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/espacio2"
        android:weightSum="1">


        <TextView
            android:text="@string/telefono_ingresado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"


            />

        <TextView
            android:text="@string/telefono_muestra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:gravity="center"


            />


    </LinearLayout>


     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/espacio2"
        android:weightSum="1">


        <TextView
            android:text="@string/email_ingresado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"


            />

        <TextView
            android:text="@string/email_muestra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:gravity="center"


            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/espacio2"
        android:weightSum="1">


        <TextView
            android:text="@string/descripcion_ingresada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"


            />

        <TextView
            android:text="@string/descripcion_muestra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:gravity="center"


            />






    </LinearLayout>

    <Button
        android:text="@string/editar_datos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_marginTop="@dimen/espacio3"

        />


</LinearLayout>
